# bazel-tutorial

./: .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
projects/calculator/: calculator_test.py
projects/genrule_a/: BUILD.bazel
projects/genrule_b/: BUILD.bazel
projects/go_hello_world/: BUILD.bazel  hello_world.go  hello_world_test.go
projects/go_web/: BUILD.bazel  main.go
projects/my-python-app/: BUILD.bazel
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
projects/python_calculator/: calculator_test.py
projects/python_web/: BUILD.bazel  main.py
